// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiTableHeaderCellCheckbox is rendered 1`] = `
<th
  aria-label="aria-label"
  class="ouiTableHeaderCellCheckbox testClass1 testClass2"
  data-test-subj="test subject string"
  scope="col"
>
  <div
    class="ouiTableCellContent"
  />
</th>
`;

exports[`OuiTableHeaderCellCheckbox width and style accepts style attribute 1`] = `
<th
  class="ouiTableHeaderCellCheckbox"
  scope="col"
  style="width:20%"
>
  <div
    class="ouiTableCellContent"
  >
    Test
  </div>
</th>
`;

exports[`OuiTableHeaderCellCheckbox width and style accepts width attribute 1`] = `
<th
  class="ouiTableHeaderCellCheckbox"
  scope="col"
  style="width:10%"
>
  <div
    class="ouiTableCellContent"
  >
    Test
  </div>
</th>
`;

exports[`OuiTableHeaderCellCheckbox width and style accepts width attribute as number 1`] = `
<th
  class="ouiTableHeaderCellCheckbox"
  scope="col"
  style="width:100px"
>
  <div
    class="ouiTableCellContent"
  >
    Test
  </div>
</th>
`;

exports[`OuiTableHeaderCellCheckbox width and style resolves style and width attribute 1`] = `
<th
  class="ouiTableHeaderCellCheckbox"
  scope="col"
  style="width:10%"
>
  <div
    class="ouiTableCellContent"
  >
    Test
  </div>
</th>
`;
